syntax = "proto3";

package example;

// Greeter service for demonstration
service Greeter {
  // Unary RPC
  rpc SayHello (HelloRequest) returns (HelloReply);
  
  // Server streaming RPC
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
  
  // Client streaming RPC
  rpc SayHelloMany (stream HelloRequest) returns (HelloReply);
  
  // Bidirectional streaming RPC
  rpc SayHelloChat (stream HelloRequest) returns (stream HelloReply);
}

// User service for more complex examples
service UserService {
  rpc GetUser (GetUserRequest) returns (User);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// Messages
message HelloRequest {
  string name = 1;
  map<string, string> metadata = 2;
}

message HelloReply {
  string message = 1;
  string trace_id = 2;
  int64 timestamp = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int64 created_at = 4;
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}